# ImpInterpreters

./: README.md
denotational/IMP/: .gitignore  IMP.cabal  IMPManual.md
denotational/IMP/src/: InterpIMP.hs  LexerIMP.x  Main.hs  ParserIMP.y
denotational/IMP/tests/: test1.imp  test2.imp  test3.imp
operational/IMP/: IMP.cabal  IMPManual.md
operational/IMP/src/: InterpIMP.hs  LexerIMP.x  Main.hs  ParserIMP.y
operational/IMP/tests/: test1.imp  test2.imp  test3.imp  test4.imp
