cabal-version:      2.4
name:               IMP
version:            0.1.0.0
synopsis:           IMP Language interpreter
description:        Operational Semantics of IMP Language
author:             Amadeu Marques
maintainer:         
category:           Language
extra-source-files: CHANGELOG.md

executable IMP
    main-is:          Main.hs
    other-modules:    LexerIMP, ParserIMP, InterpIMP
    build-tool-depends:  alex:alex, happy:happy
    build-depends:    base ^>=4.15.0.0, containers, array, mtl
    hs-source-dirs:   src
    default-language: Haskell2010